--- a/components/Login/package.json
+++ b/components/Login/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Footer",
+  "name": "Layout",
   "version": "0.0.0",
   "private": true,
-  "main": "./Footer.js"
+  "main": "./Login.js"
 }
