--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss-nesting": "^2.3.1",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "rimraf": "^2.6.1",
     "s3": "^4.4.0",
