--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "history": "^4.6.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-draft-wysiwyg": "^1.8.4",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.3"
