--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
     "react": "^15.4.2",
+    "react-calendar-heatmap": "^1.1.0",
     "react-dom": "^15.4.2",
     "react-draft-wysiwyg": "^1.8.4",
+    "react-helmet": "^5.0.1",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.3"
