--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "babel-runtime": "^6.23.0",
     "browser-sync": "^2.18.8",
     "chai": "^4.0.0-canary.1",
+    "chai-enzyme": "^0.6.1",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.27.3",
     "ejs": "^2.5.6",
+    "enzyme": "^2.8.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
