--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-register": "^6.24.0",
     "babel-runtime": "^6.23.0",
     "browser-sync": "^2.18.8",
-    "chai": "^4.0.0-canary.1",
+    "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.27.3",
