--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^2.8.2",
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
+    "cycle-react": "^5.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
     "react": "^15.4.2",
@@ -19,6 +20,7 @@
     "react-helmet": "^5.0.1",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "rx": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
