--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^15.4.2",
     "react-draft-wysiwyg": "^1.8.4",
     "react-helmet": "^5.0.1",
+    "react-loopback": "^0.4.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "rx": "^4.1.0",
