--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "cycle-react": "^5.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
+    "prop-types": "^15.5.9",
     "react": "^15.4.2",
     "react-calendar-heatmap": "^1.1.0",
     "react-dom": "^15.4.2",
     "react-draft-wysiwyg": "^1.8.4",
     "react-helmet": "^5.0.1",
-    "react-loopback": "^0.4.0",
-    "react-redux": "^5.0.3",
+    "react-redux": "^5.0.4",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.0",
     "rx": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
   },
@@ -74,6 +75,7 @@
     "postcss-selector-not": "^2.0.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.2",
+    "redux-devtools": "^3.4.0",
     "rimraf": "^2.6.1",
     "s3": "^4.4.0",
     "style-loader": "^0.16.1",
