--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
     "cycle-react": "^5.0.0",
+    "draftjs-to-html": "^0.7.2",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
     "prop-types": "^15.5.9",
