--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "draftjs-to-html": "^0.7.2",
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.9",
     "react": "^15.4.2",
     "react-calendar-heatmap": "^1.1.0",
