--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastclick": "^1.0.6",
     "history": "^4.6.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.9",
     "react": "^15.4.2",
     "react-calendar-heatmap": "^1.1.0",
