--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-scripts": "1.0.10",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "rxjs": "^5.4.2",
+    "swagger-client": "^3.0.19"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
@@ -22,9 +24,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.2.1",
+    "flow-bin": "^0.51.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.1",
     "prettier": "^1.5.3",
