--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "antd": "^2.12.0",
+    "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
     "rxjs": "^5.4.2",
