--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-redux": "next",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
     "rxjs": "^5.4.2",
     "swagger-client": "^3.0.19"
   },
