Build css before running tests

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "flow": "flow",
-    "test": "react-scripts test --env=jsdom",
+    "test": "npm run build-css && react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
